# 2023-01-25-ImGui-barebone-windows

./: CMakeLists.txt  README.md  main.cpp
Utils/: CMakeLists.txt
Utils/include/utils/: npy_utils.h  split.h
Utils/src/utils/: npy_utils.cpp  web_utils.cpp
WebServer/include/web_server/: TcpListener.h
WebServer/src/: CMakeLists.txt  MultiClientChat.cpp  TcpListener.cpp  WebServer.cpp
cmake/: link_opencv_and_torch.cmake
config/include/config/: global.h
imgui/: CMakeLists.txt
imgui/include/imgui/: global.h  imguipp.h  settings.h  trial_component.h
imgui/src/: imgui.cpp  imgui_demo.cpp  imguipp.cpp  menu.cpp
mediapipe_libtorch/: CMakeLists.txt
mediapipe_libtorch/src/: blazebase.cpp  blazebase.h
mediapipe_pytorch/: demo.py
mongoose/: CMakeLists.txt
numcpp/: CMakeLists.txt
numcpp/.github/actions/BuildTestInstall/: action.yml
numcpp/.github/actions/LinuxEnvironmentSetup/: action.yml
numcpp/.github/actions/WindowsEnvironmentSetup/: action.yml
numcpp/.github/workflows/: Tests.yml
numcpp/include/NumCpp/Core/Internal/: Error.hpp
numcpp/include/NumCpp/ImageProcessing/: windowExceedances.hpp
numcpp/include/NumCpp/NdArray/: NdArrayCore.hpp
opencv_and_torch/: CMakeLists.txt  capture_utils.cpp  capture_utils.h
python/: blaze_face_landmark.py  blaze_face_landmark_to_cpp.py
test/: CMakeLists.txt  main.cpp
